--- a/src/App.css
+++ b/src/App.css
@@ -88,9 +88,8 @@ ol, ul {
   width: 170px;
   padding: 5px 10px;
   border: none;
-  outline: solid 1px rgb(117, 117, 117);
+  background: white;
   border-radius: 0.5rem;
-  background: none;
   margin: 5px;
   cursor: pointer;
   font-family: 'Mali', cursive;
@@ -100,6 +99,7 @@ ol, ul {
   width: 270px;
   height: 383px;
   border: solid 1px rgb(185, 185, 185);
+  background-color: rgb(197, 197, 239);
   border-radius: 0.5rem;
   overflow-x: hidden;
   overflow-y: auto;
@@ -110,13 +110,13 @@ ol, ul {
   background-color: #f5f5f5;
 }
 .history-list::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgb(59, 54, 96);
   border-radius: 10px;
   background-color: #f5f5f5;
 }
 .history-list::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgb(59, 54, 96);
   background-color: #666666;
 }
 
